--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "backend": "json-server --watch ./data/db.json --port 3000"
+    "backend": "json-server --watch ./data/group-info.json --port 3000"
   },
   "dependencies": {
     "daisyui": "^2.51.3",
     "json-server": "^0.17.2",
-    "vue": "^3.2.47"
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
